force-app/main/default/objects/WOD_Movements__c/WOD_Movements__c.object-meta.xml
<CustomObject>
    <label>Movements</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>