force-app/main/default/objects/WOD_Movements__c/fields/Is_Bodyweight__c.field-meta.xml
<CustomField>
    <fullName>Is_Bodyweight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bodyweight?</label>
    <type>Checkbox</type>
</CustomField>