force-app/main/default/objects/WOD_Movements__c/fields/Is_Strict__c.field-meta.xml
<CustomField>
    <fullName>Is_Strict__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ex: lunge = strict &amp; air squat != strict because you are moving too fast</description>
    <inlineHelpText>Would you be able to stop in middle of movement without momentum?</inlineHelpText>
    <label>Is Strict?</label>
    <type>Checkbox</type>
</CustomField>