force-app/main/default/objects/WOD_Movements__c/fields/Push_or_Pull__c.field-meta.xml
<CustomField>
    <fullName>Push_or_Pull__c</fullName>
    <label>Push or Pull</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Push</fullName>
            </value>
            <value>
                <fullName>Pull</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>