force-app/main/default/objects/WOD_Movements__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barbell</fullName>
            </value>
            <value>
                <fullName>Cardio</fullName>
            </value>
            <value>
                <fullName>Dumbbell</fullName>
            </value>
            <value>
                <fullName>Foundational</fullName>
            </value>
            <value>
                <fullName>Gymnastic</fullName>
            </value>
            <value>
                <fullName>Other Object</fullName>
                <isActive>false</isActive>
                <label>Other Object</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>