force-app/main/default/objects/WOD_Movements__c/fields/Weight_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Weight_Multiplier__c</fullName>
    <label>Weight Multiplier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>