force-app/main/default/objects/WOD_Movements__c/validationRules/Barbell.validationRule-meta.xml
<ValidationRule>
    <fullName>Barbell</fullName>
    <active>true</active>
    <description>Barbell Movements must start with Barbell</description>
    <errorConditionFormula>AND(  ISPICKVAL(Type__c, &apos;Barbell&apos;), 
 NOT(BEGINS(Name, &apos;Barbell&apos;) ))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Barbell Movements must start with Barbell</errorMessage>
</ValidationRule>