force-app/main/default/objects/WOD_Movements__c/validationRules/Dumbbell.validationRule-meta.xml
<ValidationRule>
    <fullName>Dumbbell</fullName>
    <active>true</active>
    <description>Dumbbell Movements must start with DB or KB</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Type__c, &apos;Dumbbell&apos;), 
  NOT(OR(BEGINS(Name, &apos;DB&apos;),
         BEGINS(Name, &apos;KB&apos;)
      )
  )
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Dumbbell Movements must start with DB or KB</errorMessage>
</ValidationRule>