force-app/main/default/objects/WOD_Movements__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Strict__c</columns>
    <columns>Is_Bodyweight__c</columns>
    <columns>Push_or_Pull__c</columns>
    <columns>Type__c</columns>
    <columns>Weight_Multiplier__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>