force-app/main/default/objects/WOD_Movements__c/listViews/Strict_Movements.listView-meta.xml
<ListView>
    <fullName>Strict_Movements</fullName>
    <columns>NAME</columns>
    <columns>Is_Strict__c</columns>
    <columns>Is_Bodyweight__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Strict__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Strict Movements</label>
</ListView>